# GloomAmiga

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  RELEASING.md  VERIFY_RELEASE.md  plan.md
.github/workflows/: ci.yml  release.yml
amiga/: README.md  bounce.bb2  btest.bb2  c2p.bb2  c2ptest.bb2  cd32.bb2  ctest.bb2  cunt.bb2  doom.bb2  ecstest.bb2  gb.bb2  hdinstall.bb2  help.bb2  info.bb2  intui.bb2  it.bb2  key.bb2  ktest.bb2  line.bb2  lores.bb2  ltest.bb2  makeanim.bb2  makeblit.bb2  makeblit2.bb2  makecamrots.bb2  makecamrots2.bb2  makechat.bb2  makechunky.bb2  makeflat.bb2  makefont.bb2  makegridoffs.bb2  maker128.bb2  maker64.bb2  makergb.bb2  makesqr.bb2  maped.bb2  maped2.bb2  pal.bb2  pal2.bb2  reader.bb2  (+7 more)
cmake/: cache_bust_web_shell.cmake  copy_if_missing.cmake
package/: GLOOM.INI  README.TXT  template.html
scripts/: compare_renderer_frames.py  generate_checksums.py  package_release.py  run_selftests.py  setup_dos_build.ps1  verify_runtime_assets.ps1
src/: iff.c  iff.h  main.c  map.c  map.h  sdl_dos_compat.h
tools/: build_dos.ps1  extract_amiga_art.py
webrtc/gloom-signaling/: README.md  package.json
webrtc/muttistuntcarsignal/: wrangler.jsonc
webrtc/muttistuntcarsignal/src/: index.js
